# doxa

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
agent/: intent-card.json  owner-map.json  proof-lanes.toml  test-map.json
scenarios/: trolley.ttl
scripts/: audit.sh  risk-gate.sh  run-metrics.sh
spec-core/: agents.toml  dispositions.toml  normative.toml  ontology.toml  processes.toml  qualities.toml
spec-frameworks/: consequentialism.toml  deontology.toml  virtue-ethics.toml
src/: compare.rs  guard.rs  lib.rs  main.rs  reason.rs
tests/: acceptance_ac1.rs  acceptance_ac2.rs  acceptance_ac3.rs  acceptance_ac4.rs  acceptance_ac5.rs  acceptance_ac6.rs  acceptance_ac7.rs  acceptance_ac8.rs  acceptance_ac9.rs  compare_cli.rs  guard_ac2_trolley.rs  guard_ac3_majority.rs  guard_ac4_framework.rs  guard_ac5_lexical.rs  guard_ac6_breakdown_always_present.rs  guard_ac7_exit_codes.rs  proptest_invariants.rs  reason_ac2_ac3.rs  reason_tests.rs
